--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,10 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-linux-embedded-hal = "^0.3.0"
-pwm-pca9685 = "^0.2.0"
+embedded-hal = "0.2.3"
+linux-embedded-hal = "0.3.0"
+pwm-pca9685 = "0.2.0"
 actix = "0.10.0-alpha.1"
+
+[dev-dependencies]
+embedded-hal-mock = "0.7.1"
